--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "\"# graphql-node-api\"",
   "scripts": {
     "gulp": "node_modules/.bin/gulp",
-    "dev": "node_modules/.bin/nodemon -e ts --delay 1 --watch src/ --exec node dist/app.js",
+    "dev": "node_modules/.bin/nodemon -e ts --delay 1 --watch src/ --exec node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,11 +18,17 @@
   },
   "homepage": "https://github.com/jorgehrique/graphql-node-api#readme",
   "devDependencies": {
-    "gulp": "3.9.1",
+    "@types/express": "^4.16.0",
+    "@types/node": "^10.12.17",
+    "gulp": "^4.0.0",
     "gulp-clean": "0.3.2",
     "gulp-typescript": "3.2.2",
     "nodemon": "^1.12.0",
     "ts-node": "^7.0.1",
     "typescript": "2.5.3"
+  },
+  "dependencies": {
+    "express": "^4.16.4",
+    "expressjs": "^1.0.1"
   }
 }
