--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/jorgehrique/graphql-node-api#readme",
   "devDependencies": {
     "@types/express": "^4.16.0",
+    "@types/express-graphql": "^0.6.2",
+    "@types/graphql": "^14.0.3",
     "@types/node": "^10.12.17",
     "gulp": "^4.0.0",
     "gulp-clean": "0.3.2",
@@ -29,6 +31,8 @@
   },
   "dependencies": {
     "express": "^4.16.4",
-    "expressjs": "^1.0.1"
+    "express-graphql": "^0.7.1",
+    "graphql": "^14.0.2",
+    "graphql-tools": "^4.0.3"
   }
 }
